# NHentai-Tauri-App

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md
docs/: architecture.md  development.md  features.md  index.md
frontend/: index.html
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ext/: api.rs  cloudfare.rs  context_menu.rs  database.rs  global_shortcuts.rs  mod.rs  navigation.rs  tag_blacklist.rs  tray.rs  universal_deep_link.rs  webnotifications.rs
