[package]
name = "nhentai"
version = "1.0.0"
description = "NHentai doujinshi reader - Doujinshi, manga, and artbooks"
authors = ["Joshua V. Lewis"]
edition = "2021"

[lib]
name = "nhentai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "nhentai"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-utils = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = ">=2.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
webview2-com = "0.38"
windows-core = "0.61"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time"] }
base64 = "0.22"
